--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.4",
-        "ramsey/uuid": "5.x-dev"
+        "ramsey/uuid": "^4.7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
